tests/restrict-unifi-management-policies-other-identity-delete/resources.yaml
---
apiVersion: dns.unifi.m.crossplane.io/v1alpha1
kind: Record
metadata:
  name: wildcard
  namespace: unifi
spec:
  managementPolicies: ["*"]
  forProvider: {}
